--- a/.gitignore
+++ b/.gitignore
@@ -1057,3 +1057,5 @@ output/matrix/tk/xmfbox.tcl
 output/matrix/tk86t.dll
 output/matrix/unicodedata.pyd
 output/matrix/VCRUNTIME140.dll
+Structural diagram.vsdx
+~WRL2585.tmp
