--- a/.gitignore
+++ b/.gitignore
@@ -1061,3 +1061,14 @@ Structural diagram.vsdx
 ~WRL2585.tmp
 Algorithm scheme.vsdx
 ~WRL2912.tmp
+Презентация/Иконки/free-icon-accuracy-2519393.png
+Презентация/Иконки/free-icon-calculator-3884483.png
+Презентация/Иконки/free-icon-interface-2462837.png
+Презентация/Иконки/free-icon-math-5609021.png
+Презентация/Иконки/free-icon-news-3884339.png
+Презентация/Иконки/free-icon-python-1822899.png
+Презентация/Иконки/free-icon-repaired-8046633.png
+Презентация/Иконки/free-icon-pin-3884564.png
+Презентация/Иконки/free-icon-verification-7339329.png
+Презентация/Иконки/free-icon-voice-message-app-3884452.png
+Презентация/Фон слайда.png
