--- a/.gitignore
+++ b/.gitignore
@@ -1072,3 +1072,4 @@ Algorithm scheme.vsdx
 Презентация/Иконки/free-icon-verification-7339329.png
 Презентация/Иконки/free-icon-voice-message-app-3884452.png
 Презентация/Фон слайда.png
+~WRL2057.tmp
