--- a/.gitignore
+++ b/.gitignore
@@ -1073,3 +1073,4 @@ Algorithm scheme.vsdx
 Презентация/Иконки/free-icon-voice-message-app-3884452.png
 Презентация/Фон слайда.png
 ~WRL2057.tmp
+Презентация/~$Презентация к курсовой работе.pptx
